--- a/InformationSystems/InformationSystems.Graphs.Console/InformationSystems.Graphs.Console.csproj
+++ b/InformationSystems/InformationSystems.Graphs.Console/InformationSystems.Graphs.Console.csproj
@@ -1,15 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <LangVersion>preview</LangVersion>
     <EnablePreviewFeatures>true</EnablePreviewFeatures>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\InformationSystems.Graphs\InformationSystems.Graphs.csproj" />
     <ProjectReference Include="..\InformationSystems.Shared\InformationSystems.Shared.csproj" />
+    <ProjectReference Include="..\InformationSystems.Graphs\InformationSystems.Graphs.csproj" />
   </ItemGroup>
 
 </Project>
