+ implemented prim's algorithm

--- a/InformationSystems/InformationSystems.Graphs/InformationSystems.Graphs.csproj
+++ b/InformationSystems/InformationSystems.Graphs/InformationSystems.Graphs.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\InformationSystems.Shared\InformationSystems.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SpanningTrees\" />
+  </ItemGroup>
+
 </Project>
